test: fix some